tests/baselines/reference/mismatchedExplicitTypeParameterAndArgumentType.errors.txt
mismatchedExplicitTypeParameterAndArgumentType.ts(7,32): error TS2339: Property 'toString' does not exist on type 'string | number'.
  Property 'toString' does not exist on type 'string'.
mismatchedExplicitTypeParameterAndArgumentType.ts(9,31): error TS2322: Type 'number' is not assignable to type 'Object'.
mismatchedExplicitTypeParameterAndArgumentType.ts(9,34): error TS2322: Type 'string' is not assignable to type 'Object'.
mismatchedExplicitTypeParameterAndArgumentType.ts(10,34): error TS2322: Type 'string' is not assignable to type 'number'.
mismatchedExplicitTypeParameterAndArgumentType.ts(11,15): error TS2558: Expected 2 type arguments, but got 1.


==== mismatchedExplicitTypeParameterAndArgumentType.ts (5 errors) ====
    function map<T, U>(xs: T[], f: (x: T) => U) {
        var ys: U[] = [];
        xs.forEach(x => ys.push(f(x)));
        return ys;
    }
    
    var r0 = map([1, ""], (x) => x.toString());
                                   ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'string | number'.
!!! error TS2339:   Property 'toString' does not exist on type 'string'.
    var r5 = map<any, any>([1, ""], (x) => x.toString());
    var r6 = map<Object, Object>([1, ""], (x) => x.toString());
                                  ~
!!! error TS2322: Type 'number' is not assignable to type 'Object'.
                                     ~~
!!! error TS2322: Type 'string' is not assignable to type 'Object'.
    var r7 = map<number, string>([1, ""], (x) => x.toString()); // error
                                     ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    var r7b = map<number>([1, ""], (x) => x.toString()); // error
                  ~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    var r8 = map<any, string>([1, ""], (x) => x.toString());